--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+	background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+}
