--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,24 @@
 body {
 	background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
 }
+
+.card-title {
+	display: flex;
+	justify-content: space-between;
+	transition: all 0.3s ease-in-out;
+}
+
+.card-title > h2 {
+	max-width: 75%;
+}
+.card-title > button {
+	display: none;
+}
+
+.card-title > button:hover > svg {
+	color: darkgoldenrod;
+}
+
+.card-title:hover > button {
+	display: block;
+}
